Added Chrome Sync support, plus support for setting a name

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,13 @@ body {
 	height: 100%;
 	width: 100%;
 	position: absolute;
+	text-align: center;
+}
 
+.time {
 	font-size: 120px;
+}
+
+.name {
+	cursor: pointer;
 }
