--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,19 @@
 body {
-	background-color: black;
 	color: white;
+	text-shadow: 0px 0px 12px #000000
+}
+
+.wallpaper {
+	/* background-color: black; */
+	background-image: url("https://source.unsplash.com/category/nature/1600x900/daily");
+	background-size: cover;
+	background-position: center;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 }
 
 .centered_box {
