--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
 	color: white;
-	text-shadow: 0px 0px 12px #000000
+	text-shadow: 0px 0px 12px #000000;
+	font-family: 'Roboto', sans-serif;
 }
 
 .wallpaper {
@@ -28,6 +29,11 @@ body {
 
 .time {
 	font-size: 120px;
+	line-height: 135px;
+}
+
+.welcome_box {
+	font-size: 45px;
 }
 
 .selectabale {
