Solve all pasting issues for text. Refactor some of the code

--- a/css/style.css
+++ b/css/style.css
@@ -60,6 +60,15 @@ body {
 	opacity: 1;
 }
 
+[contentEditable] {
+	display: inline-block;
+	/*
+		This is needed to allow easy line breaks in the input. It leads to a bug though. See these two links for details:
+		1) http://stackoverflow.com/a/20533364/506913
+		2) http://stackoverflow.com/a/34445203/506913
+	/*
+}
+
 .selectabale {
 	cursor: pointer;
 	transition: background-color 200ms linear;
