--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ body {
 		This is needed to allow easy line breaks in the input. It leads to a bug though. See these two links for details:
 		1) http://stackoverflow.com/a/20533364/506913
 		2) http://stackoverflow.com/a/34445203/506913
-	/*
+	*/
 }
 
 .selectabale {
