--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ body {
 }
 
 .time {
-	font-size: 120px;
+	font-size: 150px;
 	line-height: 135px;
 }
 
@@ -46,7 +46,7 @@ body {
 .weather .weather_icon {
 	max-width: 50px;
 	max-height: 50px;
-	filter: invert(1);
+	filter: invert(1) drop-shadow( 0px 0px 2px rgba(0,0,0,.7) );
 }
 
 .weather .weather_icon,
