--- a/css/style.css
+++ b/css/style.css
@@ -114,12 +114,12 @@ body {
 	visibility: visible;
 }
 
-.selectabale {
+.selectable {
 	cursor: pointer;
 	transition: background-color 200ms linear;
 }
 
-.selectabale:hover {
+.selectable:hover {
 	background-color: rgba(255,255,255,.4);
 }
 
