--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@ body {
 	color: white;
 	text-shadow: 0px 0px 12px #000000;
 	font-family: 'Roboto', sans-serif;
+	overflow: hidden;
+	font-size: 14px;
 }
 
 .wallpaper {
@@ -43,6 +45,11 @@ body {
 	overflow-x: hidden;
 }
 
+.weather .weather_top {
+	display: flex;
+	align-items: center;
+}
+
 .weather .weather_icon {
 	max-width: 50px;
 	max-height: 50px;
@@ -64,13 +71,20 @@ body {
 }
 
 .weather .weather_location_container {
-	margin-top: -14px;
+	margin-top: -5px;
 }
 
 .widget_outer {
 	position: absolute;
 	transition: opacity 200ms linear;
 	opacity: .3;
+}
+
+.widget_outer.bottom_left {
+	padding: 150px 150px 20px 20px;
+	bottom: 0;
+	left: 0;
+	text-align: left;
 }
 
 .widget_outer.bottom_right {
@@ -89,6 +103,15 @@ body {
 
 .widget_outer:hover {
 	opacity: 1;
+}
+
+svg-icon svg {
+	width: 32px;
+	height: 32px;
+}
+
+svg-icon svg * {
+	fill: white;
 }
 
 [contentEditable] {
