--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,6 @@ body {
 
 .wallpaper {
 	/* background-color: black; */
-	background-image: url("https://source.unsplash.com/category/nature/1920x1080/daily");
 	background-size: cover;
 	background-position: center;
 
@@ -17,21 +16,37 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%;
+
+	z-index: -100;
+}
+
+.wallpaper.blurred {
+	filter: blur(3px);
+	box-sizing: content-box;
+	padding: 6px;
+	top: -6px;
+	left: -6px;
+}
+
+.wallpaper img {
+	width: 100%;
+	height: 100%;
+	opacity: .01;
 }
 
 .centered_box {
 	display: flex;
 	justify-content: center;
-	align-items: center;
-	height: 100%;
+	align-items: center
+;	height: 100%;
 	width: 100%;
 	position: absolute;
 	text-align: center;
+	text-shadow: 0px 0px 30px #333;
 }
 
 .time {
-	font-size: 150px;
-	line-height: 135px;
+	font-size: 180px;
 }
 
 .welcome_box {
@@ -72,6 +87,17 @@ body {
 
 .weather .weather_location_container {
 	margin-top: -5px;
+}
+
+.prefs_panel {
+	background: rgba(0,0,0,.7);
+	border-radius: 10px;
+	width: 300px;
+	height: 200px;
+}
+
+.prefs_button {
+	cursor: pointer;
 }
 
 .widget_outer {
