--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
 	font-size: 14px;
 }
 
+h1 {
+	font-size: 20px;
+	margin-bottom: 10px;
+}
+
 .wallpaper {
 	/* background-color: black; */
 	background-size: cover;
@@ -94,6 +99,16 @@ body {
 	border-radius: 10px;
 	width: 300px;
 	height: 200px;
+	padding: 20px;
+}
+
+.prefs_row {
+	display: flex;
+}
+
+.prefs_row .label, .prefs_row .field {
+	flex: 1 1 0;
+	overflow: hidden;
 }
 
 .prefs_button {
@@ -134,6 +149,7 @@ body {
 svg-icon svg {
 	width: 32px;
 	height: 32px;
+	filter: drop-shadow( 0px 0px 2px rgba(0,0,0,.7) );
 }
 
 svg-icon svg * {
