--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ h1 {
 .centered_box {
 	display: flex;
 	justify-content: center;
-	align-items: center
+	align-items: center;
 ;	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -106,7 +106,7 @@ h1 {
 
 .prefs_panel {
 	background: rgba(0,0,0,.7);
-	border-radius: 10px 10px 10px 0;
+	border-radius: 10px 10px 0 10px;
 	width: 360px;
 	height: 200px;
 	padding: 14px;
@@ -123,7 +123,7 @@ h1 {
 .prefs_panel .triangle {
 	position: absolute;
 	bottom: -15px;
-	left: 0;
+	right: 0;
 	width: 0;
 	height: 0;
 	border-style: solid;
@@ -207,7 +207,14 @@ h1 {
 .widget_outer {
 	position: absolute;
 	transition: opacity 200ms linear;
-	/*opacity: .3;*/
+}
+
+.widget_outer.dimmed {
+	opacity: .3;
+}
+
+.widget_outer.dimmed:hover {
+	opacity: 1;
 }
 
 .widget_outer.bottom_left {
@@ -224,11 +231,47 @@ h1 {
 	text-align: right;
 }
 
+.widget_outer.top_left {
+	padding: 20px 150px 150px 20px;
+	top: 0;
+	left: 0;
+	text-align: left;
+}
+
 .widget_outer.top_right {
 	padding: 20px 20px 150px 150px;
 	top: 0;
 	right: 0;
 	text-align: right;
+}
+
+.bookmarks {
+	width:  200px;
+}
+
+.bookmarks .icon {
+	border-radius: 5px;
+	width: 32px;
+	height: 32px;
+	border: 1px solid rgba(50,50,50,.7);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(255,255,255,.7);
+	font-size: 16px;
+	box-shadow: 0px 0px 5px rgba(0,0,0,.7);
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+	color: white;
+	text-decoration: none;
+	float: left;
+	margin-right: 10px;
+	margin-bottom: 10px;
+}
+
+.bookmarks .icon:hover {
+	border: 1px solid rgba(255,255,255,.3);
+	box-shadow: 0 0 5px rgba(255, 255, 255, .3);
 }
 
 /*
