--- a/css/style.css
+++ b/css/style.css
@@ -273,7 +273,7 @@ input[type="checkbox"] {
 	font-size: 16px;
 	box-shadow: 0px 0px 5px rgba(0,0,0,.7);
 	cursor: pointer;
-	transition: all 0.2s ease-in-out;
+	transition: box-shadow 0.2s ease-in-out;
 	color: white;
 	text-decoration: none;
 	float: left;
