Added forecast support. Added rounding for fahrenheit.

--- a/css/style.css
+++ b/css/style.css
@@ -82,9 +82,15 @@ p {
 	overflow-x: hidden;
 }
 
+.weather .loader {
+	font-size: 2px;
+	margin-right: 8px;
+}
+
 .weather .weather_top {
 	display: flex;
 	align-items: center;
+	justify-content: flex-end;
 }
 
 .weather .weather_icon {
@@ -110,6 +116,33 @@ p {
 
 .weather .weather_location_container {
 	margin-top: 2px;
+}
+
+.weather_currently {
+	padding-bottom: 10px;
+}
+
+.weather_forecast_container {
+	position: relative;
+}
+
+.weather_forecast {
+	position: absolute;
+	width: 500px;
+	height: 250px;
+	right: 0;
+	top: 0;
+	box-sizing: content-box;
+	top: 0;
+	background-color: rgba(0,0,0,.6);
+	padding: 8px;
+	border-radius: 20px;
+}
+
+.weather_forecast iframe {
+	filter: invert(1);
+	width: 100%;
+	height: 100%;
 }
 
 .prefs_panel {
@@ -370,4 +403,64 @@ svg-icon svg * {
 	background-color: rgba(0,0,0,.4);
 	border: 1px solid rgba(80,80,80,.7);
 	border-radius: 10px;
+}
+
+.loader,
+.loader:before,
+.loader:after {
+	background: #ffffff;
+	-webkit-animation: load1 1s infinite ease-in-out;
+	animation: load1 1s infinite ease-in-out;
+	width: 1em;
+	height: 4em;
+}
+.loader {
+	display: inline-block;
+	font-size: 4px;
+	color: #ffffff;
+	text-indent: -9999em;
+	position: relative;
+	-webkit-transform: translateZ(0);
+	-ms-transform: translateZ(0);
+	transform: translateZ(0);
+	-webkit-animation-delay: -0.16s;
+	animation-delay: -0.16s;
+}
+.loader:before,
+.loader:after {
+	position: absolute;
+	top: 0;
+	content: '';
+}
+.loader:before {
+	left: -1.5em;
+	-webkit-animation-delay: -0.32s;
+	animation-delay: -0.32s;
+}
+.loader:after {
+	left: 1.5em;
+}
+@-webkit-keyframes load1 {
+0%,
+80%,
+100% {
+box-shadow: 0 0;
+height: 4em;
+}
+40% {
+box-shadow: 0 -2em;
+height: 5em;
+}
+}
+@keyframes load1 {
+0%,
+80%,
+100% {
+box-shadow: 0 0;
+height: 4em;
+}
+40% {
+box-shadow: 0 -2em;
+height: 5em;
+}
 }
