--- a/css/style.css
+++ b/css/style.css
@@ -319,6 +319,13 @@ input[type="checkbox"] {
 	box-shadow: 0 0 5px rgba(255, 255, 255, .3);
 }
 
+.bookmarks .icon img {
+	max-width: 100%;
+	max-height: 100%;
+	padding: 5px;
+	box-sizing: border-box;
+}
+
 .bookmarks_editor {
 	position: absolute;
 	right: 0;
