--- a/css/style.css
+++ b/css/style.css
@@ -314,6 +314,11 @@ input[type="checkbox"] {
 	margin-bottom: 10px;
 }
 
+.bookmarks .icon:focus {
+	box-shadow: 0 0 20px rgba(0, 167, 255, 0.9);
+	border-color: rgba(0, 167, 255, 0.9);
+}
+
 .bookmarks .icon:hover, .bookmarks .icon.being_edited {
 	border: 1px solid rgba(255,255,255,.3);
 	box-shadow: 0 0 5px rgba(255, 255, 255, .3);
