--- a/css/style.css
+++ b/css/style.css
@@ -326,6 +326,7 @@ input[type="checkbox"] {
 
 .bookmarks .icon img {
 	max-width: 100%;
+	min-width: 0%;
 	max-height: 100%;
 	padding: 5px;
 	box-sizing: border-box;
