--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,20 @@
-body, input, button {
-	color: white;
-	text-shadow: 0px 0px 12px #000000;
-	font-family: 'Roboto', sans-serif;
-	overflow: hidden;
-	font-size: 14px;
-	background: black;
+body,
+input,
+button {
+  color: white;
+  text-shadow: 0px 0px 12px #000000;
+  font-family: "Roboto", sans-serif;
+  overflow: hidden;
+  font-size: 14px;
+  background: white;
+}
+
+@media (prefers-color-scheme: dark) {
+  body,
+  input,
+  button {
+    background: #333639;
+  }
 }
 
 strong {
